(Client) Feat: `DNS` Inspecting

--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -115,7 +115,24 @@
   "Tab.Inspector.Protocol.DHCPv4.RelayAgentAddress": "Relay Agent's Address",
   "Tab.Inspector.Protocol.DHCPv4.ClientMAC": "Client's MAC",
   "Tab.Inspector.Protocol.DHCPv6.MessageType": "Message Type",
-  
+  "Tab.Inspector.Protocol.DNS.MessageType": "Message Type",
+  "Tab.Inspector.Protocol.DNS.OperationCode": "Operation Code",
+  "Tab.Inspector.Protocol.DNS.AuthoritativeAnswer": "Authoritative Answer",
+  "Tab.Inspector.Protocol.DNS.ResponseCode": "Response Code",
+  "Tab.Inspector.Protocol.DNS.Records": "Records",
+  "Tab.Inspector.Protocol.DNS.Question": "Question Section",
+  "Tab.Inspector.Protocol.DNS.Question.Name": "Name",
+  "Tab.Inspector.Protocol.DNS.Question.EntryType": "Entry Type",
+  "Tab.Inspector.Protocol.DNS.Question.Class": "Class",
+  "Tab.Inspector.Protocol.DNS.Answer": "Answer Section",
+  "Tab.Inspector.Protocol.DNS.Authority": "Authority Section",
+  "Tab.Inspector.Protocol.DNS.Additional": "Additional Section",
+  "Tab.Inspector.Protocol.DNS.Record.Name": "Name",
+  "Tab.Inspector.Protocol.DNS.Record.RecordType": "Record Type",
+  "Tab.Inspector.Protocol.DNS.Record.Class": "Class",
+  "Tab.Inspector.Protocol.DNS.Record.TimeToLive": "Time To Live",
+  "Tab.Inspector.Protocol.DNS.Record.Data": "Data",
+
   "Tab.Status.NetworkData.Label.Peak": "Peak",
   "Tab.Status.NetworkData.Label.Throughput": "Throughput",
   "Tab.Status.NetworkData.Label.Received": "Received",
