--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -115,6 +115,23 @@
   "Tab.Inspector.Protocol.DHCPv4.RelayAgentAddress": "Адреса агента ретрансляції",
   "Tab.Inspector.Protocol.DHCPv4.ClientMAC": "MAC клієнта",
   "Tab.Inspector.Protocol.DHCPv6.MessageType": "Тип повідомлення",
+  "Tab.Inspector.Protocol.DNS.MessageType": "Тип повідомлення",
+  "Tab.Inspector.Protocol.DNS.OperationCode": "Код операції",
+  "Tab.Inspector.Protocol.DNS.AuthoritativeAnswer": "Авторитетна відповідь",
+  "Tab.Inspector.Protocol.DNS.ResponseCode": "Код відповіді",
+  "Tab.Inspector.Protocol.DNS.Records": "Записи",
+  "Tab.Inspector.Protocol.DNS.Question": "Розділ питання",
+  "Tab.Inspector.Protocol.DNS.Question.Name": "Ім'я",
+  "Tab.Inspector.Protocol.DNS.Question.EntryType": "Тип запису",
+  "Tab.Inspector.Protocol.DNS.Question.Class": "Клас",
+  "Tab.Inspector.Protocol.DNS.Answer": "Розділ відповіді",
+  "Tab.Inspector.Protocol.DNS.Authority": "Розділ авторизації",
+  "Tab.Inspector.Protocol.DNS.Additional": "Додатковий розділ",
+  "Tab.Inspector.Protocol.DNS.Record.Name": "Ім'я",
+  "Tab.Inspector.Protocol.DNS.Record.RecordType": "Тип запису",
+  "Tab.Inspector.Protocol.DNS.Record.Class": "Клас",
+  "Tab.Inspector.Protocol.DNS.Record.TimeToLive": "Час життя",
+  "Tab.Inspector.Protocol.DNS.Record.Data": "Дані",
 
   "Tab.Status.NetworkData.Label.Peak": "Peak",
   "Tab.Status.NetworkData.Label.Throughput": "Throughput",
