(Client) Fix: UA Localization, peak label was in english

--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -133,10 +133,10 @@
   "Tab.Inspector.Protocol.DNS.Record.TimeToLive": "Час життя",
   "Tab.Inspector.Protocol.DNS.Record.Data": "Дані",
 
-  "Tab.Status.NetworkData.Label.Peak": "Peak",
-  "Tab.Status.NetworkData.Label.Throughput": "Throughput",
-  "Tab.Status.NetworkData.Label.Received": "Received",
-  "Tab.Status.NetworkData.Label.Sent": "Sent",
+  "Tab.Status.NetworkData.Label.Peak": "Пік",
+  "Tab.Status.NetworkData.Label.Throughput": "Загалом",
+  "Tab.Status.NetworkData.Label.Received": "Отримано",
+  "Tab.Status.NetworkData.Label.Sent": "Відправлено",
   "Tab.Status.Hover.PlotSettings": "Налаштування графіку",
   "Tab.Status.Legend.Throughput": "Пропускна здатність",
   "Tab.Status.Legend.Send": "Відправлено",
