(Client) Feat: Locator structure

--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -104,6 +104,10 @@
   "Tab.Inspector.Label.Empty": "Empty.",
   "Tab.Inspector.Label.Protocol": "Protocol",
   "Tab.Inspector.Label.Number": "#",
+  "Tab.Inspector.Protocol.IpSender": "Sender's IP",
+  "Tab.Inspector.Protocol.IpTarget": "Target's IP",
+  "Tab.Inspector.Protocol.MacSender": "Sender's MAC",
+  "Tab.Inspector.Protocol.MacTarget": "Target's Mac",
   "Tab.Inspector.Protocol.Arp.Operation": "Operation",
   "Tab.Inspector.Protocol.Arp.IpSender": "Sender's IP",
   "Tab.Inspector.Protocol.Arp.IpTarget": "Target's IP",
