--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -104,6 +104,10 @@
   "Tab.Inspector.Label.Empty": "Порожньо.",
   "Tab.Inspector.Label.Protocol": "Протокол",
   "Tab.Inspector.Label.Number": "№",
+  "Tab.Inspector.Protocol.IpSender": "IP Відправника",
+  "Tab.Inspector.Protocol.IpTarget": "IP Цілі",
+  "Tab.Inspector.Protocol.MacSender": "MAC Відправника",
+  "Tab.Inspector.Protocol.MacTarget": "MAC Цілі",
   "Tab.Inspector.Protocol.Arp.Operation": "Операція",
   "Tab.Inspector.Protocol.Arp.IpSender": "IP Відправника",
   "Tab.Inspector.Protocol.Arp.IpTarget": "IP Цілі",
