--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -164,6 +164,8 @@
   "Tab.SettingsClient.Label.Language": "Мова",
   "Tab.SettingsClient.Label.LogFormat": "Формат логування",
   "Tab.SettingsClient.Label.LogLevel": "Рівень логування",
+  "Tab.SettingsClient.Label.ParsedFramesLimit": "Ліміт збереження фреймів",
+  "Tab.SettingsClient.Label.ParsedFramesLimit.Note": "Якщо цей параметр увімкнено, лише N розібраних пакетів зберігатимуться під час виконання.",
   "Tab.SettingsClient.Label.SyncDelay": "Затримка синхронізації",
   "Tab.SettingsClient.Label.Theme": "Тема",
   "Tab.SettingsClient.Label.UnparsedFramesDrop": "Відкинути нерозібрані пакети",
