--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -144,6 +144,8 @@
   "Tab.Inspector.Protocol.HTTP.Request.Target": "Target",
   "Tab.Inspector.Protocol.HTTP.Response.StatusCode": "Status Code",
   "Tab.Inspector.Protocol.HTTP.Response.Reason": "Reason",
+  "Tab.Inspector.Protocol.ICMPv4.MessageType": "Message Type",
+  "Tab.Inspector.Protocol.ICMPv4.Code": "Code",
 
   "Tab.Status.NetworkData.Label.Peak": "Peak",
   "Tab.Status.NetworkData.Label.Throughput": "Throughput",
