--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -146,6 +146,8 @@
   "Tab.Inspector.Protocol.HTTP.Response.Reason": "Reason",
   "Tab.Inspector.Protocol.ICMPv4.MessageType": "Message Type",
   "Tab.Inspector.Protocol.ICMPv4.Code": "Code",
+  "Tab.Inspector.Protocol.ICMPv6.MessageType": "Message Type",
+  "Tab.Inspector.Protocol.ICMPv6.Code": "Code",
 
   "Tab.Status.NetworkData.Label.Peak": "Peak",
   "Tab.Status.NetworkData.Label.Throughput": "Throughput",
