--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -148,6 +148,9 @@
   "Tab.Inspector.Protocol.ICMPv4.Code": "Code",
   "Tab.Inspector.Protocol.ICMPv6.MessageType": "Message Type",
   "Tab.Inspector.Protocol.ICMPv6.Code": "Code",
+  "Tab.Inspector.Protocol.IPv4.AddressSource": "Source Address",
+  "Tab.Inspector.Protocol.IPv4.AddressDestination": "Destination Address",
+  "Tab.Inspector.Protocol.IPv4.TimeToLive": "Time to Live",
 
   "Tab.Status.NetworkData.Label.Peak": "Peak",
   "Tab.Status.NetworkData.Label.Throughput": "Throughput",
