--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -148,6 +148,9 @@
   "Tab.Inspector.Protocol.ICMPv4.Code": "Код",
   "Tab.Inspector.Protocol.ICMPv6.MessageType": "Тип повідомлення",
   "Tab.Inspector.Protocol.ICMPv6.Code": "Код",
+  "Tab.Inspector.Protocol.IPv4.AddressSource": "Адреса відправника",
+  "Tab.Inspector.Protocol.IPv4.AddressDestination": "Адреса отримувача",
+  "Tab.Inspector.Protocol.IPv4.TimeToLive": "Час життя",
 
   "Tab.Status.NetworkData.Label.Peak": "Пік",
   "Tab.Status.NetworkData.Label.Throughput": "Загалом",
