--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -151,6 +151,9 @@
   "Tab.Inspector.Protocol.IPv4.AddressSource": "Адреса відправника",
   "Tab.Inspector.Protocol.IPv4.AddressDestination": "Адреса отримувача",
   "Tab.Inspector.Protocol.IPv4.TimeToLive": "Час життя",
+  "Tab.Inspector.Protocol.IPv6.AddressSource": "Адреса відправника",
+  "Tab.Inspector.Protocol.IPv6.AddressDestination": "Адреса отримувача",
+  "Tab.Inspector.Protocol.IPv6.HopLimit": "Ліміт переходів",
 
   "Tab.Status.NetworkData.Label.Peak": "Пік",
   "Tab.Status.NetworkData.Label.Throughput": "Загалом",
