(Client) Feat: Devices list

--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -161,6 +161,14 @@
   "Tab.Inspector.Protocol.UDP.PortDestination": "Destination Port",
   "Tab.Inspector.Protocol.UDP.PossibleApplication": "Possible Application",
 
+  "Tab.Status.Devices.Heading": "Devices",
+  "Tab.Status.Devices.Empty": "Empty",
+  "Tab.Status.Devices.DeviceGeneric": "Device",
+  "Tab.Status.Devices.Device.MAC": "MAC",
+  "Tab.Status.Devices.Device.IPv4": "IPv4",
+  "Tab.Status.Devices.Device.IPv6": "IPv6",
+  "Tab.Status.Devices.Device.Vendor": "Vendor",
+  "Tab.Status.Devices.Device.Vendor.Unknown": "Unknown",
   "Tab.Status.NetworkData.Label.Peak": "Peak",
   "Tab.Status.NetworkData.Label.Throughput": "Throughput",
   "Tab.Status.NetworkData.Label.Received": "Received",
