--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -161,6 +161,14 @@
   "Tab.Inspector.Protocol.UDP.PortDestination": "Порт отримувача",
   "Tab.Inspector.Protocol.UDP.PossibleApplication": "Можливий застосунок",
 
+  "Tab.Status.Devices.Heading": "Пристрої",
+  "Tab.Status.Devices.Empty": "Немає",
+  "Tab.Status.Devices.DeviceGeneric": "Пристрій",
+  "Tab.Status.Devices.Device.MAC": "MAC",
+  "Tab.Status.Devices.Device.IPv4": "IPv4",
+  "Tab.Status.Devices.Device.IPv6": "IPv6",
+  "Tab.Status.Devices.Device.Vendor": "Виробник",
+  "Tab.Status.Devices.Device.Vendor.Unknown": "Невідомий",
   "Tab.Status.NetworkData.Label.Peak": "Пік",
   "Tab.Status.NetworkData.Label.Throughput": "Загалом",
   "Tab.Status.NetworkData.Label.Received": "Отримано",
