(Client) Feat: Protocol stats

--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -162,13 +162,15 @@
   "Tab.Inspector.Protocol.UDP.PortDestination": "Порт отримувача",
   "Tab.Inspector.Protocol.UDP.PossibleApplication": "Можливий застосунок",
 
-  "Tab.Status.Main.Captured": "Захоплено фреймів",
-  "Tab.Status.Main.Records": "Всього записів",
-  "Tab.Status.Main.DeviceAliases": "Псевдонімів пристроїв",
-  "Tab.Status.Main.DevicesFound": "Знайдено пристроїв",
-  "Tab.Status.Main.ConnectionProfiles": "Профілів підключення",
-  "Tab.Status.Main.Ports": "Портів в базі",
-  "Tab.Status.Main.Vendors": "Вендорів OUI в базі",
+  "Tab.Stats.Main.Captured": "Захоплено фреймів",
+  "Tab.Stats.Main.Records": "Всього записів",
+  "Tab.Stats.Main.DeviceAliases": "Псевдонімів пристроїв",
+  "Tab.Stats.Main.DevicesFound": "Знайдено пристроїв",
+  "Tab.Stats.Main.ConnectionProfiles": "Профілів підключення",
+  "Tab.Stats.Main.Ports": "Портів в базі",
+  "Tab.Stats.Main.Vendors": "Вендорів OUI в базі",
+  "Tab.Stats.Main.Header": "Застосунок",
+  "Tab.Stats.Protocols.Header": "Записів протоколів",
 
   "Tab.Status.Devices.Button.SaveAliases": "Зберегти псевдоніми",
   "Tab.Status.Devices.Heading": "Пристрої",
