--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -162,13 +162,15 @@
   "Tab.Inspector.Protocol.UDP.PortDestination": "Destination Port",
   "Tab.Inspector.Protocol.UDP.PossibleApplication": "Possible Application",
 
-  "Tab.Status.Main.Captured": "Captured frames",
-  "Tab.Status.Main.Records": "Total records",
-  "Tab.Status.Main.DeviceAliases": "Device Aliases",
-  "Tab.Status.Main.DevicesFound": "Devices Found",
-  "Tab.Status.Main.ConnectionProfiles": "Connection Profiles",
-  "Tab.Status.Main.Ports": "Ports in Database",
-  "Tab.Status.Main.Vendors": "Vendors (OUI) in Database",
+  "Tab.Stats.Main.Captured": "Captured frames",
+  "Tab.Stats.Main.Records": "Total records",
+  "Tab.Stats.Main.DeviceAliases": "Device Aliases",
+  "Tab.Stats.Main.DevicesFound": "Devices Found",
+  "Tab.Stats.Main.ConnectionProfiles": "Connection Profiles",
+  "Tab.Stats.Main.Ports": "Ports in Database",
+  "Tab.Stats.Main.Vendors": "Vendors (OUI) in Database",
+  "Tab.Stats.Main.Header": "App",
+  "Tab.Stats.Protocols.Header": "Protocol Records",
 
   "Tab.Status.Devices.Button.SaveAliases": "Save Aliases",
   "Tab.Status.Devices.Heading": "Devices",
